# recommendation-engine

./: .coverage  .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  db.ts  deno.json  docker-compose.yml  file:memdb1  pyproject.toml  server.ts
alembic/: env.py
alembic/versions/: 0001_initial_schema.py
app/: database.py  importer.py  main.py  migrations.py  models.py  progress.py  schemas.py  settings.py
docs/wiki/: API.md  Architecture.md  Data-Model.md  Home.md  Import-Pipeline.md
scripts/: __init__.py  create_db_template.py  docker_entrypoint.py  docker_smoke_test.sh  download_imdb_data.py  import_imdb.py  import_imdb.ts
tests/: test_database.py  test_docker_entrypoint.py  test_download_imdb_data.py  test_imdb_test_fixtures.py  test_importer.py  test_main.py  test_migrations.py  test_models.py  test_movies_api.py  test_movies_performance.py  test_schemas.py  test_settings.py
