[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "recommendation-engine"
version = "0.1.0"
description = "FastAPI movie recommendation engine backed by SQLAlchemy"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115",
  "sqlalchemy>=2.0",
  "uvicorn>=0.30",
  "pydantic>=2.7",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools]
packages = ["app"]

[tool.setuptools.package-data]
app = ["py.typed"]
